--- a/style.css
+++ b/style.css
@@ -1,17 +1,27 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap');
+
+
 *{
     margin: 0px;
     padding: 0px;
 }
 
 .Guilherme{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size:30px;
-    margin: 20px;
+    font-family: "Cinzel", serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+    margin: 30px;
     text-align: center;
     color: black;
     text-shadow: 1px 1px rgba(230, 228, 228, 0.486);
+}
+
+.Guilherme > a{
+    text-decoration: none;
+    color: black;
 }
 
 
@@ -23,6 +33,7 @@ body{
 .calculadora{
     color: white;
     position: absolute;
+    height: 400px;
     background-color: rgba(0, 0, 0, 0.815);
     top: 27%;
     left: 27%;
@@ -51,7 +62,7 @@ body{
     color: white;
     font-size: 16px;
     width: 60px;
-    height: 50px;
+    height: 60px;
     padding: 20px;
     cursor: pointer;
     border-radius: 5px;
