--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 .Guilherme{
     font-family: "Cinzel", serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    font-weight: weight;
     font-style: normal;
     margin: 30px;
     text-align: center;
